--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
-    {name = "HP Data Analysis Team", email = "info@hpda.com"}
+    {name = "Alejandro Ballesteros"}
 ]
 keywords = ["data-analysis", "dataframe", "high-performance", "machine-learning", "C++"]
 classifiers = [
@@ -21,8 +21,12 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
 ]
 dependencies = [
+    "matplotlib>=3.10.1",
     "numpy>=1.20.0",
+    "pandas>=2.2.3",
+    "psutil>=7.0.0",
     "pybind11>=2.6.0",
+    "tabulate>=0.9.0",
 ]
 
 [build-system]
