--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,13 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
 ]
 dependencies = [
+    "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
     "numpy>=1.20.0",
     "pandas>=2.2.3",
     "psutil>=7.0.0",
     "pybind11>=2.6.0",
+    "seaborn>=0.13.2",
     "tabulate>=0.9.0",
 ]
 
